--- a/requirements.txt
+++ b/requirements.txt
@@ -65,7 +65,7 @@ Send2Trash==1.5.0
 simplegeneric==0.8.1
 six==1.11.0
 tensorboard==1.7.0
-tensorflow==1.7.1
+tensorflow==1.5.0
 tensorflow-tensorboard==1.5.1
 termcolor==1.1.0
 terminado==0.8.1
@@ -75,3 +75,4 @@ traitlets==4.3.2
 wcwidth==0.1.7
 Werkzeug==0.14.1
 widgetsnbextension==3.4.1
+wordcloud==1.5.0
